--- a/index.html
+++ b/index.html
@@ -226,60 +226,56 @@
         </div>
     </div>
 </section>
-<!-- Steps section -->
-<section class="steps-section">
-    <div class="container">
-        <h3>Getting started with personal training is simple</h3>
-        <div class="steps-inner">
-            
-        </div>
-    </div>
-</section>
-
 
 <!-- Steps Section -->
 <section class="steps-section">
-    <div class="container">
-        <div class="one">
-            <span class="" style="color: #E9E9E9;">01</span>
+  <div class="container">
+    <h3>Getting started with personal training is simple</h3>
+    <div class="steps">
+      <div class="step-one">
+        <div class="step-number">
+          <span class="" style="color: #E9E9E9;">01</span>
         </div>
-        <div class="two">
-            <p>Let’s Chat</p>
+        <div class="step-body">
+          <h5 class="step-title">Let’s Chat</h5>
+          <p class="step-content">Got 15 mins? Grab a call with one of our trainers. Let's see if we vibe and your goals
+            match up with us.</p>
         </div>
-        <div class="three">
-            <p>Got 15 mins? Grab a call with one of our trainers. Let's see if we vibe and your goals match up with us.
-            </p>
-        </div>
-         <div class="four">
-            <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
-                alt="">
-        </div>
-        <div class="five">
-            <span class="" style="color: #E9E9E9;">02</span>
-        </div>
-        <div class="six">
-            <p>Your personal blueprint</p>
-        </div>
-        <div class="seven">
-            <p>Are we a match? Awesome! Let's get to know you better and customise a fitness program that fits your
-                life, not the other way around.</p>
-        </div>
-        <div class="eight">
-            <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
-                alt="">
-        </div>
-        <div class="nine">
-            <span class="" style="color: #E9E9E9;">03</span>
+        <div class="arrow-one">
+          <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
+              alt="">
+      </div>
+      </div>
 
+      <div class="step-two">
+        <div class="step-number">
+          <span class="" style="color: #E9E9E9;">02</span>
         </div>
-        <div class="ten">
-            <p>Start feeling positive</p>
+        <div class="step-body">
+          <h5 class="step-title">Your personal blueprint</h5>
+          <p class="step-content">Are we a match? Awesome! Let's get to know you better and customise a fitness program
+            that fits your
+            life, not the other way around.</p>
         </div>
-        <div class="eleven">
-            <p>We're with you all the way, focusing on long-term gains. It's more than shedding pounds or gaining
-                muscles, it's about deep, sustainable progress that shifts your life in a big way.</p>
+        <div class="arrow-two">
+          <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
+              alt="">
+      </div>
+      </div>
+    
+      <div class="step-three">
+        <div class="step-number">
+          <span class="" style="color: #E9E9E9;">03</span>
         </div>
+        <div class="step-body">
+          <h5 class="step-title">Start feeling positive</h5>
+          <p class="step-content">We're with you all the way, focusing on long-term gains. It's more than shedding pounds
+            or gaining
+            muscles, it's about deep, sustainable progress that shifts your life in a big way.</p>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
 <!-- Steps Section -->
 
@@ -449,7 +445,7 @@
 <section class="success-stories-section">
     <div class="container">
         <h2 class="success-stories-heading">Success Stories</h2>
-        <!-- <div class="glide">
+        <div class="glide">
           <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
               <li class="glide__slide">
@@ -495,10 +491,10 @@
               <button class="glide__arrow glide__arrow--right" id="prev" data-glide-dir=">">></button>
             </div>
           </div>
-        </div> -->
+        </div>
 
 
-        <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+        <!-- <div class="splide" role="group" aria-label="Splide Basic HTML Example">
           <div class="splide__arrows">
             <button class="splide__arrow splide__arrow--prev">
               <
@@ -528,7 +524,7 @@
                     src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
                     class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title 1</h5>
+                    <h5 class="card-title">Card title 2</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                       content.</p>
                   </div>
@@ -540,7 +536,7 @@
                     src="https://webassets-prod.ultimateperformance.com/uploads/2021/04/22120752/Ultimate-Performance-Amit.jpeg"
                     class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Card title 1</h5>
+                    <h5 class="card-title">Card title 3</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                       content.</p>
                   </div>
@@ -548,7 +544,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div> -->
 
 
         <!-- <div class="slider">
@@ -868,8 +864,8 @@
 
 3. plan section -- make box independent of content --done
 
-4. faq -- change arrow button to +- 
-change border
+4. faq -- change arrow button to +-   --done
+change border   
 add transition to ease out and ease in
 
 3. contact form    
