--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
      <script src="assets/js/custom.js"></script>
 </body> 
 <!-- 
-1. getting started section --design
+1. getting started section --design --done
 
 2. how can i help -- add image and make it independent of content  --done
 
@@ -875,6 +875,17 @@ email
 current weight
 target weight
 
+easy page
+-disclaimer
+-faq
+-privacy policy
+-terms and conditions
+ 
+-about
+-testimonials
+-trasnformations
+-plans
+-contact us
 maintanence mode -  https://prnt.sc/8O6btiMsoLin
 add 404 page
 -->
