--- a/index.html
+++ b/index.html
@@ -858,6 +858,10 @@
      <script src="assets/js/custom.js"></script>
 </body> 
 <!-- 
+  .accordion button[aria-expanded=true] .icon {
+    transform: rotate(315deg);
+}
+
 1. getting started section --design --done
 
 2. how can i help -- add image and make it independent of content  --done
