--- a/get-started.html
+++ b/get-started.html
@@ -171,11 +171,11 @@ By ticking the box below I agree to have read the privacy policy and consent to 
           <a href="tel:" class="number"><i class="fa-solid fa-phone"></i> +1234567890</a>
         </li>
         <li>
-          <a href="#" class="link"><i class="fa-brands fa-whatsapp"></i> Message me on Whatsapp</a>
+          <a href="#" class="link"><i class="fa-brands fa-whatsapp"></i> Message on Whatsapp</a>
         </li>
-        <li>
+        <!-- <li>
           <a href="#" class="link"><i class="fa-brands fa-instagram"></i> DM me on Instagram </a>
-        </li>
+        </li> -->
       </ul>
         
         
