--- a/index.html
+++ b/index.html
@@ -985,8 +985,10 @@ easy page
 -about
 -trasnformations
 -plans
--contact us
 -services
+-contact us -- done
+-get started -- done
+
 maintanence mode -  https://prnt.sc/8O6btiMsoLin
 add 404 page
 https://docs.google.com/spreadsheets/d/1u8ljcp2vWIBawrMjnIImG3EnjGawspve-WZxD5we3fk/edit?usp=sharing
