--- a/index.html
+++ b/index.html
@@ -190,6 +190,40 @@
   </div>
 </section>
 
+<!-- Our Programs -->
+<section class="services-section">
+  <div class="container">
+    <h1 class="services-heading">
+      Our Services
+    </h1>
+    <div class="services">
+      <div class="ind-services">
+        <div class="services-image"><i class="fa-solid fa-weight-scale"></i></div>
+        
+        <h3>WEIGHT MANAGEMENT</h3>
+        <p>We offer complete techniques and solutions for gaining muscle or losing fat with proper fitness guidance, Healthy substitutes / options, slight modification in your dietary habits, lifestyle management and creative workout techniques to keep your interest and motivational level going on to achieve desired body weight with gradual, systematic and organized approach.</p>
+      </div>
+      <div class="ind-services">
+        <div  class="services-image">
+          <i class="fa-brands fa-nutritionix"></i>
+
+        </div>
+        <h3>NUTRITIONAL GUIDANCE</h3>
+        <p>We offer appropriate type of diet plan for every meal with required nutritional information to suit or fulfil your body requirements based on your body type. This will include creating alternatives to unhealthy eatables and realistic plan to suit your lifestyle and food preferences.</p>
+      </div>
+      <div class="ind-services">
+        <div  class="services-image">
+          <i class="fa-solid fa-user"></i>
+        </div>
+        
+        <h3>BODY SCULPTING / TRANSFORMATION</h3>
+        <p>Body sculpting is an art. You can Tone, shape, sharpen or sculpt your body under the able guidance of our well Trained instructors.Scott offers unique/creative techniques of core-strengthening exercises’ which forms the base of your body transformation to any desired shape as per your requirement.</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Our Programs -->
+
 <!-- Why Us Section -->
 
 <section class="why-us-section">
@@ -975,22 +1009,32 @@ By ticking the box below I agree to have read the privacy policy and consent to 
  faq -- change arrow button to +-   --done
 change border   
 add transition to ease out and ease in
-
-easy page
+================================
+Pages
+Easy page
 -disclaimer
 -faq --done
 -privacy policy --done
 -terms and conditions --done
  
 -about
--trasnformations
--plans
 -services
+-transformations --done
 -contact us -- done
 -get started -- done
 
+Optional
+--Testimonials/reviews
+--plans
+
 maintanence mode -  https://prnt.sc/8O6btiMsoLin
 add 404 page
+=================================
+====================
+TODO
+arrange css to make it easy to work with
+remove bootstrap
+====================
 https://docs.google.com/spreadsheets/d/1u8ljcp2vWIBawrMjnIImG3EnjGawspve-WZxD5we3fk/edit?usp=sharing
 -->
 </html>
