--- a/index.html
+++ b/index.html
@@ -1017,15 +1017,16 @@ Easy page
 -privacy policy --done
 -terms and conditions --done
  
--about
--services
+-about --done
+-services --done
 -transformations --done
 -contact us -- done
 -get started -- done
+--plans --done
 
 Optional
 --Testimonials/reviews
---plans
+
 
 maintanence mode -  https://prnt.sc/8O6btiMsoLin
 add 404 page
