--- a/plans.html
+++ b/plans.html
@@ -112,7 +112,49 @@
           </nav>
     </header>
     <main>
-
+<!-- plan and pricing -->
+<section class="plan-pricing-section">
+  <div class="container">
+    <h2 class="plan-pricing-heading">NKPT Online Virtual Training Packages</h2>
+    <div class="plan-main-div">
+      <div class="plan-box">
+        <div class="card-body">
+          <h5 class="card-title plan-name basic-plan">Basic plan</h5>
+          <p class="card-text">£165 per month</p>
+          <ul>
+            <li> ✓ Full analysis of current lifestyle</li>
+            <li>✓ Personalised training plan (adjusted weekly)</li>
+            <li>✓ Professional nutrition guidance</li>
+            <li>✓ Healthy & high protein recipes</li>
+            <li>✘ Weekly check-in calls with me</li>
+            <li>✘ Weekly goals for continuous progress</li>
+            <li>✓ Body measurement tracking </li>
+            <li>✓ 24/7 contact with me</li>
+          </ul>
+        </div>
+        <div class="card-footer"><a href="#" class="btn btn-primary">Select Plan</a></div>
+      </div>
+      <div class="plan-box">
+        <div class="card-body">
+          <h5 class="card-title plan-name premium-plan">Premium plan</h5>
+          <p class="card-text">£198 per month</p>
+          <ul>
+            <li>✓ Full analysis of current lifestyle</li>
+            <li>✓ Personalised training plan (adjusted weekly)</li>
+            <li>✓ Professional nutrition guidance</li>
+            <li>✓ Healthy & high protein recipes</li>
+            <li>✓ Weekly check-in calls with me</li>
+            <li>✓ Weekly goals for continuous progress</li>
+            <li>✓ Body measurement tracking </li>
+            <li>✓ 24/7 contact with me</li>
+          </ul>
+        </div>
+        <div class="card-footer"><a href="#" class="btn btn-primary">Select Plan</a></div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- plan and pricing -->
     </main>
     <footer class="footer">
         <a href="#" id="backToTopBtn" class="backToTopBtn" >Back to Top ↑</a>
