--- a/get-started.html
+++ b/get-started.html
@@ -23,6 +23,7 @@
 
     <!-- Custom CSS Link -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/get-started.css" type="text/css">
     <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/>
 
       <!-- Font Awesome Link -->
@@ -173,9 +174,9 @@ By ticking the box below I agree to have read the privacy policy and consent to 
         <li>
           <a href="#" class="link"><i class="fa-brands fa-whatsapp"></i> Message on Whatsapp</a>
         </li>
-        <!-- <li>
+        <li>
           <a href="#" class="link"><i class="fa-brands fa-instagram"></i> DM me on Instagram </a>
-        </li> -->
+        </li>
       </ul>
         
         
