--- a/services.html
+++ b/services.html
@@ -23,6 +23,7 @@
 
     <!-- Custom CSS Link -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/services.css" type="text/css">
     <link rel="stylesheet" href="assets/css/mobile.css" media="screen and (max-width: 600px)" type="text/css"/>
 
       <!-- Font Awesome Link -->
@@ -115,10 +116,12 @@
     <main>
         <!-- Our Programs -->
 <section class="services-page-section">
+  <div class="service-welcome-image">
+    <h1 class="services-heading">
+        Our Services
+    </h1>
+  </div>
     <div class="container">
-        <h1 class="services-heading">
-            Our Services
-        </h1>
         <div class="services-page">
             <div class="ind-services-page">
                 <div class="services-image"><img src="/assets/images/pexels-andres-ayrton-6551070.jpg" alt=""></div>
