--- a/index.html
+++ b/index.html
@@ -383,16 +383,16 @@
 <!-- Steps Section -->
 
 <!-- How can I help Section  -->
-<section class="how-can-i-help-section">
+<section class="home-page-how-can-i-help-section">
   <div class="container">
-    <h2 class="how-can-i-help-heading">How I can Help</h2>
+    <h2 class="home-page-how-can-i-help-heading">How I can Help</h2>
     <div>
       <div class="row">
         <div class="col-lg-6">
-          <div class="how-can-i-help border border-1 rounded">
+          <div class="home-page-how-can-i-help-card border border-1 rounded">
             <div class="card-body">
               <div class="card-image">
-                <img src="assets/images/weight-loss.png" class="card-img-top how-can-i-help" alt="...">
+                <img src="assets/images/weight-loss.png" class="home-page-how-can-i-help-card-img-top" alt="...">
               </div>
               <div class="card-content">
                 <h5 class="card-title">Weight Loss</h5>
@@ -403,10 +403,10 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="how-can-i-help border border-1 rounded">
+          <div class="home-page-how-can-i-help-card border border-1 rounded">
             <div class="card-body">
               <div class="card-image">
-                <img src="assets/images/woman.png" class="card-img-top how-can-i-help" alt="...">
+                <img src="assets/images/woman.png" class="home-page-how-can-i-help-card-img-top" alt="...">
               </div>
               <div class="card-content">
                 <h5 class="card-title">PCOs</h5>
@@ -456,48 +456,47 @@
 
 <section class="keyfigure-section">
     <div class="container">
-      <div class="">
+      <div class="keyfigure-main-div">
             <h2>KEY FIGURES</h2>
-            <div class="features-box">
-                <div class="figures-section">
-                  <div class="icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-1.png" alt="Clients" title="Clients"></div>
-                  <div class="content-section">
-                    <div class="count plus">500</div>
+            <div class="keyfigure-features-box">
+                <div class="keyfigure-figures-section">
+                  <div class="keyfigure-icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-1.png" alt="Clients" title="Clients"></div>
+                  <div class="keyfigure-content-section">
+                    <div class="keyfigure-count count plus">500</div>
                     <p>Clients</p>
                   </div>
                 </div>
 
-                <div class="figures-section">
-                  <div class="icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-2.png" alt="Operating Years" title="Operating Years"></div>
-                  <div class="content-section">
-                    <div class="count plus">20</div>
+                <div class="keyfigure-figures-section">
+                  <div class="keyfigure-icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-2.png" alt="Operating Years" title="Operating Years"></div>
+                  <div class="keyfigure-content-section">
+                    <div class="keyfigure-count count plus">20</div>
                     <p>Operating Years</p>
                   </div>
                 </div>
 
-                <div class="figures-section">
-                  <div class="icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-3.png" alt="international clients" title="international clients"></div>
-                  <div class="content-section">
-                    <div class="count plus">100</div>
+                <div class="keyfigure-figures-section">
+                  <div class="keyfigure-icon-section"><img src="https://www.crunchesandcurves.com/assets/images/key-3.png" alt="international clients" title="international clients"></div>
+                  <div class="keyfigure-content-section">
+                    <div class="keyfigure-count count plus">100</div>
                     <p>International Clients</p>
                   </div>
                 </div>
-
           </div>
       </div>
     </div>
   </section>
 
-<!-- Stats Section -->
+<!-- Key Figure  Section -->
 
 <!-- plan and pricing -->
-<section class="plan-pricing-section">
+<section class="home-page-plan-pricing-section">
   <div class="container">
-    <h2 class="plan-pricing-heading">NKPT Online Virtual Training Packages</h2>
-    <div class="plan-main-div">
-      <div class="plan-box">
+    <h2 class="home-page-plan-pricing-heading">Scott Online Training Packages</h2>
+    <div class="home-page-plan-main-div">
+      <div class="home-page-plan-box">
         <div class="card-body">
-          <h5 class="card-title plan-name basic-plan">Basic plan</h5>
+          <h3 class="card-title home-page-plan-name basic-plan">Basic plan</h3>
           <p class="card-text">£165 per month</p>
           <ul>
             <li> ✓ Full analysis of current lifestyle</li>
@@ -510,11 +509,11 @@
             <li>✓ 24/7 contact with me</li>
           </ul>
         </div>
-        <div class="card-footer"><a href="#" class="btn btn-primary">Select Plan</a></div>
+        <div class="card-footer"><a href="#" class="btn btn-primary">Get Started</a></div>
       </div>
-      <div class="plan-box">
+      <div class="home-page-plan-box">
         <div class="card-body">
-          <h5 class="card-title plan-name premium-plan">Premium plan</h5>
+          <h3 class="card-title home-page-plan-name premium-plan">Premium plan</h3>
           <p class="card-text">£198 per month</p>
           <ul>
             <li>✓ Full analysis of current lifestyle</li>
@@ -527,7 +526,7 @@
             <li>✓ 24/7 contact with me</li>
           </ul>
         </div>
-        <div class="card-footer"><a href="#" class="btn btn-primary">Select Plan</a></div>
+        <div class="card-footer"><a href="#" class="btn btn-primary">Get Started</a></div>
       </div>
     </div>
   </div>
