--- a/index.html
+++ b/index.html
@@ -277,54 +277,54 @@
 
 <!-- Steps Section -->
 
-<!-- <section class="steps-section">
+<section class="home-page-steps-section">
   <div class="container">
     <h3>Getting started with personal training is simple</h3>
-  <div class="steps row ">
-    <div class="step-one col-lg-6">
-      <div class="step-number">
+  <div class="home-page-steps">
+    <div class="home-page-step-one">
+      <div class="home-page-step-number">
         <span class="" style="color: #E9E9E9;">01</span>
       </div>
-      <div class="step-body">
-        <h5 class="step-title">Let’s Chat</h5>
-        <p class="step-content">Got 15 mins? Grab a call with one of our trainers. Let's see if we vibe and your goals
+      <div class="home-page-step-body">
+        <h5 class="home-page-step-title">Let’s Chat</h5>
+        <p class="home-page-step-content">Got 15 mins? Grab a call with one of our trainers. Let's see if we vibe and your goals
           match up with us.</p>
       </div>
 
   </div>
-        <div class="arrow-one">
+        <div class="home-page-arrow-one">
         <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
             alt="">
     </div>
-    <div class="step-two  col-lg-6">
-      <div class="step-number">
+    <div class="home-page-step-two">
+      <div class="home-page-step-number">
         <span class="" style="color: #E9E9E9;">02</span>
       </div>
-      <div class="step-body">
-        <h5 class="step-title">Your personal blueprint</h5>
-        <p class="step-content">Are we a match? Awesome! Let's get to know you better and customise a fitness program
+      <div class="home-page-step-body">
+        <h5 class="home-page-step-title">Your personal blueprint</h5>
+        <p class="home-page-step-content">Are we a match? Awesome! Let's get to know you better and customise a fitness program
           that fits your
           life, not the other way around.</p>
       </div>
 
     </div>
-    <div class="arrow-two">
+    <div class="home-page-arrow-two">
       <img src="https://images.squarespace-cdn.com/content/v1/62f164130da0e57ce00519c2/d9fc3bfc-aa1d-41d0-bb95-7a36176702f7/down-arrow-45.png"
           alt="">
   </div>
-    <div class="step-three  col-lg-6">
-      <div class="step-number">
+    <div class="home-page-step-three">
+      <div class="home-page-step-number">
         <span class="" style="color: #E9E9E9;">03</span>
       </div>
-      <div class="step-body">
-        <h5 class="step-title">Start feeling positive</h5>
-        <p class="step-content">We're with you all the way, focusing on long-term gains. It's more than shedding pounds
+      <div class="home-page-step-body">
+        <h5 class="home-page-step-title">Start feeling positive</h5>
+        <p class="home-page-step-content">We're with you all the way, focusing on long-term gains. It's more than shedding pounds
           or gaining
           muscles, it's about deep, sustainable progress that shifts your life in a big way.</p>
       </div>
     </div>
   </div>
-</section> -->
+</section>
 <!-- Steps Section -->
 
 <!-- How can I help Section  -->
