--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <!-- </div> -->
             </div>
             <div class="home-page-welcome-image">
-                <!-- <img src="/assets/images/welcome-image.webp" alt="" class=""> -->
+                <img src="/assets/images/welcome-image.webp" alt="" class="">
                 <!-- <div class="hero-slider">
                     <div class="item">
                         <img src="assets/images/hero-img.png" alt="Hero Image">
