--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
 <!-- Key Figure Section -->
 
-<section class="keyfigure-section">
+<section class="keyfigure-section" id="keyfigure-section">
     <div class="container">
       <div class="keyfigure-main-div">
             <h2>KEY FIGURES</h2>
@@ -936,36 +936,32 @@ By ticking the box below I agree to have read the privacy policy and consent to 
 </body> 
 <!-- 
 
- faq -- change arrow button to +-   --done
-change border   
-add transition to ease out and ease in
+
 ================================
 Pages
 Easy page
 -disclaimer
--faq --done
--privacy policy --done
--terms and conditions --done
- 
--about --done
--services --done
--transformations --done
--contact us -- done
--get started -- done
---plans --done
 
 Optional
 --Testimonials/reviews
 
-
 maintanence mode -  https://prnt.sc/8O6btiMsoLin
-add 404 page
 =================================
-====================
+================================
 TODO
-arrange css to make it easy to work with
+INDEX
+----------------------------
+faq -- change arrow button to +-   --done
+change border   
+add transition to ease out and ease in
+-----------------------------
+slider
+add name age and weeks
+------------------------------
 remove bootstrap
-====================
+=================================
+
+
 https://docs.google.com/spreadsheets/d/1u8ljcp2vWIBawrMjnIImG3EnjGawspve-WZxD5we3fk/edit?usp=sharing
 -->
 </html>
