--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         
       </div>
-          <nav class="navbar navbar-expand-lg bg-body-tertiary" id="navbar">
+          <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body" data-bs-theme="dark" id="navbar">
            
             <div class="container-fluid">
                 <div class="a">
